--- a/src/main/resources/templates/messagelist.html
+++ b/src/main/resources/templates/messagelist.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+</head>
 
 <body>
 
@@ -10,25 +15,25 @@
         <p><a class="btn btn-primary btn-lg" href="/list" role="button">View Your Messages</a></p>
 
         <p><a class="btn btn-primary btn-lg" href="/add" role="button">Type New Message</a></p>
-
     </div>
 
-
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-
 
 
 <table>
+<a href="/add">Type a message</a>
+    <div th:each="message : ${messages}">
+        <div th:if="${message.image} != null">
+            <img th:src="${message.image}" />
+        </div>
+
     <tr>
         <th>Id</th>
         <th>Content</th>
         <th>Publication Date</th>
         <th>Sender</th>
     </tr>
+
     <tr th:each="message : ${messages}">
         <td th:text="${message.id}"></td>
         <td th:text="${message.content}"></td>
@@ -39,6 +44,13 @@
             <a th:href="@{/detail/{id}(id=${message.id})}">Details</a> -
             <a th:href="@{/delete/{id}(id=${message.id})}">Delete</a>
         </td></tr>
+
+    </div>
 </table>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
